--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -79,6 +79,15 @@
       "Requirement already satisfied: standard-chunk in e:\\program file\\lib\\site-packages (from standard-aifc->SpeechRecognition) (3.13.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.2 -> 25.3\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
     }
    ],
    "source": [
@@ -87,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "7963e02d-f21e-409f-9a20-a6f38e1901a0",
    "metadata": {},
    "outputs": [
@@ -109,8 +118,10 @@
     "import google.generativeai as genai\n",
     "from datetime import datetime\n",
     "\n",
-    "GOOGLE_API_KEY= \"AIzaSyBVOhNebN-wiQRc_bMm62GVdJ-nXIrgW_o\" \n",
-    "genai.configure(api_key=GOOGLE_API_KEY)\n",
+    "\n",
+    "def configure():\n",
+    "    load_dotenv()\n",
+    "\n",
     "\n",
     "if \"chat_history\" not in st.session_state:\n",
     "    st.session_state.chat_history=[]\n",
@@ -244,7 +255,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
