--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "7963e02d-f21e-409f-9a20-a6f38e1901a0",
    "metadata": {},
    "outputs": [
@@ -119,8 +119,7 @@
     "from datetime import datetime\n",
     "\n",
     "\n",
-    "def configure():\n",
-    "    load_dotenv()\n",
+    "genai.configure(os.getenv('api_key=GOOGLE_API_KEY'))\n",
     "\n",
     "\n",
     "if \"chat_history\" not in st.session_state:\n",
