--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7963e02d-f21e-409f-9a20-a6f38e1901a0",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
     "from datetime import datetime\n",
     "\n",
     "\n",
-    "genai.configure(os.getenv('api_key=GOOGLE_API_KEY'))\n",
+    "genai.configure(api_key=os.getenv(\"GOOGLE_API_KEY\"))\n",
     "\n",
     "\n",
     "if \"chat_history\" not in st.session_state:\n",
